syntax = "proto3";

package recommendation;

service RecommendationService {
  rpc GetRecommendations (RecommendationRequest) returns (RecommendationResponse);
}

message RecommendationRequest {
  string userId = 1;
}

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  string genre = 4;
  string description = 5;
  int32 publishedYear = 6;
}

message RecommendationResponse {
  repeated Book books = 1;
}
