syntax = "proto3";

package user;

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  repeated string preferences = 3; // tableau de préférences
}

message CreateUserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  repeated string preferences = 4;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  repeated string preferences = 4;
}
